# codeowners

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  codeowners-lookup.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/codeowners/: __init__.py  cli.py
tests/: test_cli.py  test_codeowners.py
