[project]
name = "codeowners-cli"
version = "0.9.0"
description = "Codeowners parser and CLI for Python"
authors = [{ name = "Zachary Blackwood", email = "zachary.blackwood@snowflake.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["codeowners", "git", "github"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/blackary/codeowners"

[project.scripts]
codeowners-cli = "codeowners.cli:main"

[build-system]
requires = ["uv_build>=0.7,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "codeowners"
source-dir = "."

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9", "ty>=0.0.1a0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.9"
